k8s/4.agenciavirtual-hml-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: agenciavirtual
  name: agenciavirtual
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2        # how many pods we can add at a time
      maxUnavailable: 0
  selector:
    matchLabels:
      app: agenciavirtual
  template:
    metadata:
      labels:
        app: agenciavirtual
    spec:
      containers:
        - name: agenciavirtual
          image: acrneononprod.azurecr.io/agenciavirtualhml:BUILD_ID
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1200Mi"
              cpu: .10
            limits:
              memory: "2500Mi"
              cpu: .50
          ports:
          - containerPort: 8080
            protocol: TCP
