k8s/1.agenciavirtual-external-postgre-hml.yaml
kind: Service
apiVersion: v1
metadata:
  name: agenciavirtualdb
spec:
  type: ExternalName
  externalName: dbinfra01.postgres.database.azure.com
