k8s/3.agenciavirtual-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: AGENCIA_APP_NAME
  name: AGENCIA_SERVICE_NAME
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: AGENCIA_APP_NAME
